--- a/splash.yaml
+++ b/splash.yaml
@@ -1,13 +1,13 @@
 flutter_native_splash:
   color: "#FFFFFF"
   color_dark: "#272727"
-  image: assets\images\SIH_icon.png
-  image_dark: assets\images\SIH_icon.png
+  image: assets\images\impact_light.png
+  image_dark: assets\images\impact.png
 
   android_12:
     color: "#FFFFFF"
     color_dark: "#272727"
-    image: assets\images\SIH_icon.png
-    image_dark: assets\images\SIH_icon.png
+    image: assets\images\impact_light.png
+    image_dark: assets\images\impact.png
 
   web: false
