--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - assets/logos/
     - assets/images/
     - assets/images/onboarding_screen/
+    - assets/images/login_screen/
     - assets/icons/brands/
 
   # An image asset can refer to one or more resolution-specific "variants", see
